--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <!-- Header Section - FIXED/STICKY position -->
             <header class="p-6 md:p-8 bg-gray-900 text-white rounded-t-xl sticky top-0 z-10">
                 <div class="flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6">
-                    <!-- Profile Picture/Logo - UPDATED with new Discord CDN link --><div class="w-24 h-24 md:w-32 md:h-32 flex items-center justify-center">
-                        <img src="https://cdn.discordapp.com/attachments/988651682122584134/1431731658427596853/es2r_logo.png?ex=68fe7b83&is=68fd2a03&hm=ff2189826f971a9e7317e8022b3a97ed828fede02195684a63c0ba7a8c4a856f&" alt="ESR 2R Logo" class="w-full h-full object-cover">
+                    <!-- Profile Picture/Logo - REVERTED to stable Imgur link --><div class="w-24 h-24 md:w-32 md:h-32 flex items-center justify-center">
+                        <img src="https://i.imgur.com/YwO5v8B.png" alt="ESR 2R Logo" class="w-full h-full object-cover">
                     </div>
                     
                     <div class="text-center md:text-left">
