--- a/index.html
+++ b/index.html
@@ -46,17 +46,9 @@
             <header class="p-6 md:p-8 bg-gray-900 text-white rounded-t-xl sticky top-0 z-10">
                 <div class="flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6">
                     
-                    <!-- CSS RECREATION OF ES2R LOGO -->
-                    <!-- This 2x2 grid recreates the image using code so it works universally without external links -->
-                    <div class="w-24 h-24 md:w-32 md:h-32 grid grid-cols-2 grid-rows-2 rounded-lg overflow-hidden shadow-lg flex-shrink-0">
-                        <!-- Top Left: E (Teal) -->
-                        <div class="bg-teal-500 flex items-center justify-center text-white font-bold text-3xl md:text-5xl leading-none">E</div>
-                        <!-- Top Right: S (Orange) -->
-                        <div class="bg-orange-400 flex items-center justify-center text-white font-bold text-3xl md:text-5xl leading-none">S</div>
-                        <!-- Bottom Left: 2 (Orange) -->
-                        <div class="bg-orange-400 flex items-center justify-center text-white font-bold text-3xl md:text-5xl leading-none">2</div>
-                        <!-- Bottom Right: R (Teal) -->
-                        <div class="bg-teal-500 flex items-center justify-center text-white font-bold text-3xl md:text-5xl leading-none">R</div>
+                    <!-- Profile Picture/Logo - Using GitHub Raw Link -->
+                    <div class="w-24 h-24 md:w-32 md:h-32 flex items-center justify-center">
+                        <img src="https://raw.githubusercontent.com/esramos-design/esr_cv/main/es2r_logo.png" alt="ESR 2R Logo" class="w-full h-full object-cover rounded-lg shadow-lg">
                     </div>
                     
                     <div class="text-center md:text-left">
